# TenzDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tenz/tenzdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tenz/tenzdemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tenz/tenzdemo/: ExampleUnitTest.kt
bluetooth/: build.gradle
bluetooth/src/main/: AndroidManifest.xml
bluetooth/src/main/res/layout/: activity_main.xml  item_bluetooth_device.xml
customview/: build.gradle
customview/src/main/: AndroidManifest.xml
customview/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
nfc/: build.gradle
nfc/src/main/: AndroidManifest.xml
nfc/src/main/res/layout/: activity_main.xml
screenshot/: build.gradle
screenshot/src/main/: AndroidManifest.xml
screenshot/src/main/res/layout/: activity_main.xml
serialport/: CMakeLists.txt  build.gradle
serialport/src/androidTest/java/com/tenz/serialport/: ExampleInstrumentedTest.kt
serialport/src/main/: AndroidManifest.xml
serialport/src/main/java/com/tenz/serialport/: MainActivity.kt
serialport/src/test/java/com/tenz/serialport/: ExampleUnitTest.kt
watermark/: build.gradle
watermark/src/main/: AndroidManifest.xml
watermark/src/main/res/layout/: activity_main.xml
watermark/src/main/res/values/: strings.xml
widget/: build.gradle
widget/src/main/: AndroidManifest.xml
widget/src/main/res/drawable/: ic_baseline_refresh_24.xml
widget/src/main/res/layout/: my_app_widget_provider.xml
widget/src/main/res/xml/: app_widget_provider.xml
xcamera/: build.gradle
xcamera/src/main/: AndroidManifest.xml
xcamera/src/main/res/layout/: activity_main.xml
xcamera/src/main/res/xml/: file_paths.xml
(+30 files in other folders)
